# MusicVisualizer

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  setup_unix.sh  setup_win.sh
include/: audio.h  geometry.h  shader.h  song.h  window.h
shader/: bar.frag  bar.vert
src/: audio.cpp  downloader.cpp  geometry.cpp  main.cpp  shader.cpp  song.cpp  window.cpp
